--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,21 @@
-title: Site Title
+title: Jonathan 'Gus' Standiford
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Personal website
 permalink: '/:title/'
 
 # Author settings
-author: Your Name # add your name
+author: Jonathan 'Gus' Standiford # add your name
 author-pic: yosh-ginsu.jpg
-about-author: About you
+about-author: Learning Commons Graduate Assistant
 
 # Contact links
-email: # Add your Email address
-phone: # Add your Phone number
+email: jstandiford@my.dom.edu # add your email address
+phone: (224) 532-3914 # Add your Phone number
 website: # Add your website, do not add http://
 linkedin: # Add your Linkedin handle
 github: #Add your Github handle
-twitter:  # Add your Twitter handle
-facebook: # Add your Facebook handle
+twitter:  @JonathanStandi3 # Add your Twitter handle
+facebook: gus.standiford.5 # Add your Facebook handle
 instagram: # Add your Instagram handle
 pinterest: # Add your Pinterest handle
 
