--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ phone: (224) 532-3914 # Add your Phone number
 website: # Add your website, do not add http://
 linkedin: # Add your Linkedin handle
 github: #Add your Github handle
-twitter:  @JonathanStandi3 # Add your Twitter handle
+twitter:  JonathanStandi3 # Add your Twitter handle
 facebook: gus.standiford.5 # Add your Facebook handle
 instagram: # Add your Instagram handle
 pinterest: # Add your Pinterest handle
